fix: img loading=lazy 추가 및 visibility를 이용하도록 변경

--- a/src/pages/MainList/ui/PokemonCard.module.scss
+++ b/src/pages/MainList/ui/PokemonCard.module.scss
@@ -8,7 +8,6 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  //gap: 8px;
 
   border: 1px solid map-get(color.$background, border);
   border-radius: 12px;
@@ -22,7 +21,7 @@
   img {
     width: 170px;
     height: 170px;
-    display: none;
+    visibility: hidden;
   }
   p {
     height: 30px;
@@ -30,7 +29,7 @@
 }
 
 .loading-box {
-  height: 170px;
+  height: 100%;
   display: flex;
   align-items: center;
 }
